--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,11 @@
 <?xml version="1.1" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.dszsu.tss">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:label="透明截图"
         tools:ignore="HardcodedDebugMode,MissingApplicationIcon">
 
-        
         <meta-data
             android:name="xposedmodule"
             android:value="true" />
