--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
 buildscript {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         google()
         mavenCentral()
+        //maven { url 'https://jitpack.io' }
         maven { url 'https://jitpack.io' }
+        maven { url 'https://api.xposed.info' }
     }
 }
 
